--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -51,7 +51,7 @@
                             edit_product_path(product),
                             class: 'hover:underline'%>
               </li>
-              
+              sdasda:
               <li>
                 <%= button_to 'Destroy',
                             product,
